Google SignIn Library implementation

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,6 +90,9 @@ dependencies {
     // OkHttp library
     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.1'
 
+    // Google Sign-In Library
+    implementation 'com.google.android.gms:play-services-auth:19.2.0'
+
     // Stetho (inspection) library
     implementation 'com.facebook.stetho:stetho:1.5.1'
 
