--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,17 +12,17 @@
     android:supportsRtl="true"
     android:theme="@style/Theme.Codebreaker"
     tools:ignore="AllowBackup">
-
+    <activity android:name=".controller.LoginActivity">
+    </activity>
     <activity
-      android:name=".controller.SettingsActivity"
       android:label="@string/settings_label"
+      android:name=".controller.SettingsActivity"
       android:parentActivityName=".controller.MainActivity">
     </activity>
-
     <activity
       android:label="@string/app_name"
-      android:name=".controller.MainActivity"
-      android:launchMode="singleTop">
+      android:launchMode="singleTop"
+      android:name=".controller.MainActivity">
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
 
