--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
   xmlns:tools="http://schemas.android.com/tools"
   package="edu.cnm.deepdive.codebreaker">
 
+  <uses-permission android:name="android.permission.INTERNET"/>
   <application
     android:allowBackup="false"
     android:icon="@mipmap/ic_codebreaker_launcher"
@@ -13,6 +14,11 @@
     android:theme="@style/Theme.Codebreaker"
     tools:ignore="AllowBackup">
     <activity android:name=".controller.LoginActivity">
+      <intent-filter>
+        <action android:name="android.intent.action.MAIN"/>
+
+        <category android:name="android.intent.category.LAUNCHER"/>
+      </intent-filter>
     </activity>
     <activity
       android:label="@string/settings_label"
@@ -23,11 +29,6 @@
       android:label="@string/app_name"
       android:launchMode="singleTop"
       android:name=".controller.MainActivity">
-      <intent-filter>
-        <action android:name="android.intent.action.MAIN"/>
-
-        <category android:name="android.intent.category.LAUNCHER"/>
-      </intent-filter>
     </activity>
   </application>
 
